<resources>
    <string name="app_name">My Application</string>
    <string name="title_text">Trivia</string>
    <string name="out_of_text">Question: 0 / 000</string>
    <string name="true_button">True</string>
    <string name="false_button">false</string>
    <string name="next_button">Next</string>
    <string name="sample_question_text"> </string>
    <string name="text_formatted">Question: %d / %d</string>
    <string name="correct_answer">correct</string>
    <string name="incorrect_answer">incorrect</string>
    <string name="Score_text">Current Score</string>
    <string name="Score_value"> </string>
    <string name="points">pts</string>
    <string name="high_score">High Score</string>
    <string name="h_score">0</string>
    <string name="reset_button">reset</string>
    <string name="nah">nah</string>
</resources>