<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#141A33"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/Title"
            style="@style/MainTextStyle"
            android:text="@string/title_text"
            android:textColor="@color/light_gray"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_out_of"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/out_of_text"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.066"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Title" />

        <androidx.cardview.widget.CardView
            android:id="@+id/question_cardview"
            style="@style/generalCardView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="18dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_out_of">

            <TextView
                android:id="@+id/question_textview"
                style="@style/MainTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="@dimen/question_text_padding"
                android:text="@string/sample_question_text"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/true_button"
            style="@style/ButtonStyle"
            android:layout_width="370dp"
            android:layout_marginTop="8dp"
            android:text="@string/true_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question_cardview" />

        <Button
            android:id="@+id/false_button"
            style="@style/ButtonStyle"
            android:layout_width="370dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:text="@string/false_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/true_button" />

        <Button
            android:id="@+id/next_button"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/fast_foward_button"
            app:layout_constraintTop_toBottomOf="@+id/false_button"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/rewind_button"
            style="@style/ButtonStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/nah"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fast_foward_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/reset_button"
            app:layout_constraintTop_toBottomOf="@+id/false_button"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_baseline_fast_rewind_green"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/fast_foward_button"
            style="@style/ButtonStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/nah"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/next_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/rewind_button"
            app:layout_constraintTop_toBottomOf="@+id/false_button"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_baseline_fast_forward_green" />

        <Button
            android:id="@+id/reset_button"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/rewind_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/false_button"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView2"
            style="@style/MainTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:text="@string/high_score"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/false_button" />

        <androidx.cardview.widget.CardView
            style="@style/generalCardView"
            android:layout_width="178dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:foregroundGravity="center"
            android:padding="5dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/high_score_value"
                    style="@style/MainTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/h_score"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView"
            style="@style/MainTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Score_text"
            android:textColor="@color/light_gray"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.913"
            app:layout_constraintStart_toEndOf="@+id/Title"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            style="@style/generalCardView"
            android:layout_width="150dp"
            android:layout_height="56dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:foregroundGravity="center"
            android:padding="5dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintBottom_toTopOf="@+id/question_cardview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.766"
            app:layout_constraintStart_toEndOf="@+id/text_view_out_of"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/score_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/Score_value"
                    android:textAlignment="textEnd"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>